<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/swipeRefreshGlobalList"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.GlobalList">

    <RelativeLayout
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:visibility="gone"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="6dp"
            app:strokeWidth="1dp"
            android:id="@+id/searchCard"
            app:strokeColor="@color/cardCornerGrey">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/countryHint"
                android:id="@+id/searchEditText"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:textColor="#000"
                android:drawableStart="@drawable/search_icon"
                android:drawablePadding="5dp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            android:layout_below="@+id/searchCard"
            android:layout_margin="5dp"
            app:strokeColor="#000"
            app:strokeWidth="1dp"
            android:id="@+id/totalCasesCard">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/locationNameTextView"
                    android:text="@string/total_cases"
                    android:textColor="#000"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/confirmedCasesLayout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirmed" />

                    <TextView
                        android:id="@+id/confirmedCaseTextView_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="000"
                        android:textColor="@color/corona_red"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/locationNameTextView"
                    android:layout_marginStart="10dp"
                    android:layout_alignBottom="@id/deathCasesLayout"
                    android:gravity="bottom"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered" />

                    <TextView
                        android:id="@+id/recoveredTextView_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="00"
                        android:textColor="@color/recovered_green"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical"
                    android:layout_below="@id/confirmedCasesLayout"
                    android:layout_marginEnd="10dp"
                    android:layout_alignStart="@id/confirmedCasesLayout"
                    android:layout_marginTop="5dp"
                    android:id="@+id/deathCasesLayout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deaths" />

                    <TextView
                        android:id="@+id/deathsTextView_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="000"
                        android:textColor="#000"
                        android:textSize="20sp" />
                </LinearLayout>

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/ownCountryTollLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/totalCasesCard">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="6dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/cardCornerGrey"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ownCardLocationNameTextView"
                        android:text="Country"
                        android:textColor="#000"
                        android:layout_toStartOf="@id/ownCardconfirmedCasesLayout"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textSize="25sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:orientation="vertical"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:id="@+id/ownCardconfirmedCasesLayout">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Confirmed"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/ownCardConfirmedCaseTextView"
                            android:text="000"
                            android:textSize="20sp"
                            android:textColor="@color/corona_red"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_below="@id/ownCardLocationNameTextView"
                        android:layout_marginStart="10dp"
                        android:layout_alignBottom="@id/ownCarddeathCasesLayout"
                        android:gravity="bottom"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Recovered"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/ownCardRecoveredTextView"
                            android:text="00"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/recovered_green"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:orientation="vertical"
                        android:layout_below="@id/ownCardLocationNameTextView"
                        android:layout_marginEnd="10dp"
                        android:layout_alignStart="@id/ownCardconfirmedCasesLayout"
                        android:layout_marginTop="15dp"
                        android:id="@+id/ownCarddeathCasesLayout">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Deaths"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/ownCarddeathsTextView"
                            android:text="000"
                            android:textColor="#000"
                            android:textSize="20sp"/>
                    </LinearLayout>

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ownCountryTollLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/globalDataRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:id="@+id/updatesOnTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:id="@+id/loadingLayout"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <ProgressBar
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/progressGlobal" />

            <TextView
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loadingPlW" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/zeroCases"
            android:textStyle="bold"
            android:id="@+id/countrySafeTextView"
            android:visibility="gone"
            android:textColor="@color/recovered_green" />
    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>